# brute

./: .gitignore  BruteForce.hs  Main.hs  README.md  brute.cabal
