name:                brute

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            A simple brute-forcing program
-- description:

license:             GPL-3
license-file:        LICENSE

author:              kmein
maintainer:          kieran.meinhardt@gmail.com
-- copyright:

category:            System

build-type:          Simple

extra-source-files:  README.md, BruteForce.hs

cabal-version:       >=1.10

executable brute
  main-is:             Main.hs
  other-modules:       BruteForce
  other-extensions:    LambdaCase

  build-depends:       base >=4.8 && <4.9, timeit
  hs-source-dirs:      .

  default-language:    Haskell2010

